# toy-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat
assets/shaders/glsl/: basic.frag  material-preview.frag  material-preview.vert  model-index.frag  model-index.vert  mp-vulkan.frag  mp-vulkan.vert  outline.frag  outline.vert  solid.frag  wireframe.frag  wireframe.vert
src/: CMakeLists.txt  main.cpp
src/render/: OpenGLRender.hpp  render.h  render_OpenGL.cpp  render_OpenGL.h  render_Vulkan.cpp  render_Vulkan.h  shader.cpp  shader.h  shader_OpenGL.cpp  shader_Vulkan.cpp
src/shaders/OpenGL/: vertex.glsl
src/utils/: enum.h  file.cpp  file.h
src/viewer/: camera.cpp  camera.h  camera_orthographic.hpp  camera_perspective.hpp  scene.cpp  scene.h  viewer.cpp  viewer.h
src/viewer/widgets/: widget.cpp  widget.h  widget_HUD.hpp  widget_camera_panel.hpp  widget_model_panel.hpp  widget_notification.hpp  widget_scene_panel.hpp  widget_top_toolbar.hpp
